[tool.poetry]
name = "testbuilder"
version = "0.3.0"
description = "Generate tests for Python code"
authors = ["Andrew Gilbert <andrewg800@gmail.com>"]
license = "GPL-3.0+"
include = ["z3_source/build/python", "z3_source/*.so*", "z3_source/LICENSE.txt", "_z3config.py", "logconfig.py"]

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
visitor = {git = "https://gitlab.com/andyg0808/visitor.git"}
Logbook = "^1.4"
toolz = "^0.9.0"
astor = "^0.7.1"
typeassert = {git = "https://gitlab.com/andyg0808/typeassert.git"}
rainbowparens = {git = "https://gitlab.com/andyg0808/rainbowparens.git"}
Pygments = "^2.3"

[tool.poetry.dev-dependencies]
mypy = "^0.670.0"
pytest = "^4.3"
hypothesis = "^4.7"
black = "==18.9b0"
pytest-xdist = "^1.26"
pytest-cov = "^2.6"

[tool.poetry.scripts]
testbuilder = "bin.testbuilder:launch"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
