[tool.poetry]
name = "compiler"
version = "0.1.0"
description = "Create self-extracting precompiled modules"
authors = ["Andrew Gilbert <andrewg800@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
