[tool.poetry]
name = "mutator"
version = "0.1.0"
description = "Generates mutated Python ASTs"
authors = ["Andrew Gilbert <andrewg800@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
Python = "^3.7"
visitor = {path = "../visitor"}

[tool.poetry.dev-dependencies]
astor = "^0.7.1"
pytest = "^4.3"
hunter = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
