[tool.poetry]
name = "visitor"
version = "0.2.0"
description = "A collection of visitor implementations for Python"
authors = ["Andrew Gilbert <andrewg800@gmail.com>"]
license = "MIT"
exclude = ["visitor_test.py"]

[tool.poetry.dependencies]
python = "^3.7"
Logbook = "^1.4"

[tool.poetry.dev-dependencies]
hypothesis = "^4.7"
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
